agrego submit mas prolijo

--- a/src/Santi - Lagged features.ipynb
+++ b/src/Santi - Lagged features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -40,8 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -83,9 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -101,7 +103,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,10 +141,10 @@
     "    * Fecha de ultima conversion\n",
     "    * Fecha de ultimo checkout\n",
     "    * Fecha de ultima vez que accedio\n",
-    "* Cada cuanto hace checkouts\n",
-    "* Cada cuanto hace compras  \t\t\t (promedio o mediana)\n",
+    "    * Cada cuanto hace checkouts\n",
+    "    * Cada cuanto hace compras  \t\t\t (promedio o mediana)\n",
     "* Cada cuanto visita celulares\n",
-    "* Cada cuanto hace eventos. # promedio de diferencia entre fechas consecutivas\n",
+    "    * Cada cuanto hace eventos. # promedio de diferencia entre fechas consecutivas<\n",
     "* Cada cuanto ve distintos celulares\n",
     "probar con mes semana dia hora minuto\n",
     "\n",
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -282,13 +284,48 @@
        "4  000c79fe                              0"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_cadaCuantosDiasHaceEventos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import six\n",
+    "\n",
+    "def render_mpl_table(data, col_width=3.0, row_height=0.625, font_size=14,\n",
+    "                     header_color='#40466e', row_colors=['#f1f1f2', 'w'], edge_color='w',\n",
+    "                     bbox=[0, 0, 1, 1], header_columns=0,\n",
+    "                     ax=None, **kwargs):\n",
+    "    if ax is None:\n",
+    "        size = (np.array(data.shape[::-1]) + np.array([0, 1])) * np.array([col_width, row_height])\n",
+    "        fig, ax = plt.subplots(figsize=size)\n",
+    "        ax.axis('off')\n",
+    "\n",
+    "    mpl_table = ax.table(cellText=data.values, bbox=bbox, colLabels=data.columns, **kwargs)\n",
+    "\n",
+    "    mpl_table.auto_set_font_size(False)\n",
+    "    mpl_table.set_fontsize(font_size)\n",
+    "\n",
+    "    for k, cell in  six.iteritems(mpl_table._cells):\n",
+    "        cell.set_edgecolor(edge_color)\n",
+    "        if k[0] == 0 or k[1] < header_columns:\n",
+    "            cell.set_text_props(weight='bold', color='w')\n",
+    "            cell.set_facecolor(header_color)\n",
+    "        else:\n",
+    "            cell.set_facecolor(row_colors[k[0]%len(row_colors) ])\n",
+    "    return ax\n",
+    "\n",
+    "render_mpl_table(df, header_columns=0, col_width=2.0)\n"
    ]
   },
   {
@@ -6854,41 +6891,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6965,6 +6967,241 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.kaggle.com/tilii7/hyperparameter-grid-search-with-xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 552,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solo para contar cuanto tarda en entrenar.\n",
+    "def timer(start_time=None):\n",
+    "    if not start_time:\n",
+    "        start_time = datetime.now()\n",
+    "        return start_time\n",
+    "    elif start_time:\n",
+    "        thour, temp_sec = divmod((datetime.now() - start_time).total_seconds(), 3600)\n",
+    "        tmin, tsec = divmod(temp_sec, 60)\n",
+    "        print('\\n Time taken: %i hours %i minutes and %s seconds.' % (thour, tmin, round(tsec, 2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 553,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
+    "from sklearn.model_selection import StratifiedKFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 554,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "        'min_child_weight': [1, 5, 10],\n",
+    "        'gamma': [0.5, 1, 1.5, 2, 5],\n",
+    "        'subsample': [0.6, 0.8, 1.0],\n",
+    "        'colsample_bytree': [0.6, 0.8, 1.0],\n",
+    "        'max_depth': [3, 4, 5]\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 617,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train_con_labels = pd.merge(df_train,df_labels,how = 'inner', on ='person')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 618,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train_con_labels.drop(columns = ['person'],inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 619,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = df_train_con_labels.iloc[:,:-1],df_train_con_labels.iloc[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 620,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 621,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xg = xgb.XGBClassifier(learning_rate=0.02, n_estimators=600, objective='binary:logistic',\n",
+    "                    silent=True, nthread=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stratification seeks to ensure that each fold is representative of all strata of the data. Generally this is done in a supervised way for classification and aims to ensure each class is (approximately) equally represented across each test fold (which are of course combined in a complementary way to form training folds)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 610,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "y_train = y_train.reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 611,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_train.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 577,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import timedelta, datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 642,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 5 candidates, totalling 50 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=4)]: Done  24 tasks      | elapsed:  3.0min\n",
+      "[Parallel(n_jobs=4)]: Done  50 out of  50 | elapsed:  6.1min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Time taken: 0 hours 6 minutes and 28.13 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "folds = 10\n",
+    "param_comb = 5\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits=folds, shuffle = True, random_state = 1001)\n",
+    "\n",
+    "random_search = RandomizedSearchCV(xg, param_distributions=params, n_iter=param_comb, scoring='balanced_accuracy', n_jobs=4, cv=skf.split(X_train,y_train), verbose=3, random_state=1001 )\n",
+    "#grid = GridSearchCV(estimator=xg, param_grid=params, scoring='roc_auc', n_jobs=4, cv=skf.split(X,y), verbose=3 )\n",
+    "\n",
+    "start_time = timer(None) # timing starts from this point for \"start_time\" variable\n",
+    "random_search.fit(X_train, y_train)\n",
+    "#grid.fit(X, y)\n",
+    "timer(start_time) # timing ends here for \"start_time\" variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 648,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xg = random_search.best_estimator_\n",
+    "#xg = grid.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'colsample_bytree': 1.0,\n",
+       " 'gamma': 5,\n",
+       " 'max_depth': 3,\n",
+       " 'min_child_weight': 5,\n",
+       " 'subsample': 0.6}"
+      ]
+     },
+     "execution_count": 359,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7031,21 +7268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
-   "metadata": {},
+   "execution_count": 649,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-       "       colsample_bytree=0.8, gamma=0, learning_rate=0.1, max_delta_step=0,\n",
-       "       max_depth=5, min_child_weight=1, missing=None, n_estimators=6,\n",
-       "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
-       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=9.5, seed=None,\n",
-       "       silent=True, subsample=1)"
+       "       colsample_bytree=1.0, gamma=1, learning_rate=0.02, max_delta_step=0,\n",
+       "       max_depth=4, min_child_weight=1, missing=None, n_estimators=600,\n",
+       "       n_jobs=1, nthread=1, objective='binary:logistic', random_state=0,\n",
+       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "       silent=True, subsample=0.8)"
       ]
      },
-     "execution_count": 542,
+     "execution_count": 649,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7056,7 +7295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 650,
    "metadata": {
     "scrolled": true
    },
@@ -7067,7 +7306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 651,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7076,14 +7315,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "trainAccuracy = accuracy_score(y_train, pd.Series(xg.predict(X_train)))\n",
-    "testAccuracy = accuracy_score(y_test, predsLabel)\n",
+    "#trainAccuracy = accuracy_score(y_train, pd.Series(xg.predict(X_train)))\n",
+    "#testAccuracy = accuracy_score(y_test, predsLabel)\n",
     "\n",
     "cohenKappaScore = cohen_kappa_score(y_test, predsLabel)\n",
     "classificationReport = classification_report(y_test, predsLabel)\n",
@@ -7098,9 +7337,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 42,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -7110,33 +7349,31 @@
       "\n",
       "Metricas con Labels:\n",
       "\n",
-      "Train accuracy:  0.8533899942051381\n",
-      "Test acuracy:  0.8362091166623744\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.98      0.85      0.91      3717\n",
-      "           1       0.13      0.52      0.21       166\n",
+      "           0       0.95      1.00      0.97      3692\n",
+      "           1       1.00      0.01      0.01       191\n",
       "\n",
-      "   micro avg       0.84      0.84      0.84      3883\n",
-      "   macro avg       0.55      0.68      0.56      3883\n",
-      "weighted avg       0.94      0.84      0.88      3883\n",
+      "   micro avg       0.95      0.95      0.95      3883\n",
+      "   macro avg       0.98      0.50      0.49      3883\n",
+      "weighted avg       0.95      0.95      0.93      3883\n",
       "\n",
       "\n",
-      "Precision Score:  0.13395638629283488\n",
-      "Recall Score:  0.5180722891566265\n",
-      "F1 Score:  0.21287128712871284\n",
-      "Cohen Kappa Score:  0.1555000820703617\n",
+      "Precision Score:  1.0\n",
+      "Recall Score:  0.005235602094240838\n",
+      "F1 Score:  0.010416666666666668\n",
+      "Cohen Kappa Score:  0.009909361017991003\n",
       "\n",
       "Confusion matrix: \n",
-      "[[3161  556]\n",
-      " [  80   86]]\n",
+      "[[3692    0]\n",
+      " [ 190    1]]\n",
       "\n",
       "Metricas sin Labels:\n",
       "\n",
-      "ROC auc score:  0.7881906966040109\n",
-      "Mean squared error:  0.15840657490536486\n"
+      "ROC auc score:  0.6299612009552279\n",
+      "Mean squared error:  0.046719752675264896\n"
      ]
     }
    ],
