--- a/src/ensamblesYTheKernelTrick.ipynb
+++ b/src/ensamblesYTheKernelTrick.ipynb
@@ -68,9 +68,7 @@
     "from sklearn.kernel_approximation import AdditiveChi2Sampler\n",
     "from sklearn.kernel_approximation import Nystroem\n",
     "\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "\n",
-    "\n"
+    "from sklearn.neural_network import MLPClassifier"
    ]
   },
   {
